--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,5 +8,9 @@
                 android:id="@+id/nav_main"
                 android:icon="@drawable/main_icon1"
                 android:title="@string/menu_main" />
+        <item
+                android:id="@+id/nav_recommendations"
+                android:icon="@drawable/rec_icon1"
+                android:title="@string/menu_recommendations" />
     </group>
 </menu>
