--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -6,7 +6,13 @@
     app:startDestination="@id/nav_main">
     <fragment
         android:id="@+id/nav_main"
-        android:name="com.example.healthdiary.ui.MainFragment"
+        android:name="com.example.healthdiary.ui.main.MainFragment"
         android:label="@string/menu_main"
         tools:layout="@layout/fragment_main" />
+
+    <fragment
+            android:id="@+id/nav_recommendations"
+            android:name="com.example.healthdiary.ui.recommendations.RecommendationsFragment"
+            android:label="@string/menu_recommendations"
+            tools:layout="@layout/fragment_recommendations" />
 </navigation>
