--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,5 +12,9 @@
                 android:id="@+id/nav_recommendations"
                 android:icon="@drawable/rec_icon1"
                 android:title="@string/menu_recommendations" />
+        <item
+                android:id="@+id/nav_medicaments"
+                android:icon="@drawable/pills_icon1"
+                android:title="@string/menu_medicaments" />
     </group>
 </menu>
