--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,4 +15,10 @@
             android:name="com.example.healthdiary.ui.recommendations.RecommendationsFragment"
             android:label="@string/menu_recommendations"
             tools:layout="@layout/fragment_recommendations" />
+
+    <fragment
+            android:id="@+id/nav_medicaments"
+            android:name="com.example.healthdiary.ui.medicaments.MedicamentsFragment"
+            android:label="@string/menu_medicaments"
+            tools:layout="@layout/fragment_medicaments" />
 </navigation>
