--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -21,4 +21,10 @@
             android:name="com.example.healthdiary.ui.medicaments.MedicamentsFragment"
             android:label="@string/menu_medicaments"
             tools:layout="@layout/fragment_medicaments" />
+
+    <fragment
+            android:id="@+id/nav_watertrack"
+            android:name="com.example.healthdiary.ui.watertrack.WaterTrackFragment"
+            android:label="@string/menu_watertrack"
+            tools:layout="@layout/fragment_watertrack" />
 </navigation>
