--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -412,6 +412,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="#00FFFFFF"
                         android:scaleType="fitCenter"
                         app:srcCompat="@drawable/rec_icon" />
 
@@ -434,6 +435,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:background="#00FFFFFF"
                         android:scaleType="fitCenter"
                         app:srcCompat="@drawable/pills_icon" />
 
@@ -456,6 +458,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="#00FFFFFF"
                         android:scaleType="fitCenter"
                         app:srcCompat="@drawable/water_icon" />
 
